--- a/service/pom.xml
+++ b/service/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>service_user</module>
         <module>service_hosp</module>
+        <module>servicesad</module>
     </modules>
 
     <properties>
@@ -80,6 +81,7 @@
         </dependency>-->
     </dependencies>
     <build>
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -106,6 +108,7 @@
             </resource>
         </resources>
     </build>
+
 
 
 </project>
